--- a/location.html
+++ b/location.html
@@ -1,84 +1,117 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Location</title>
-    <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Location</title>
+  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/anime.js" defer></script>
+  <script src="js/location.js" defer></script>
 </head>
+
 <body>
-    <header id="header_sub">
-        <div class="inner">
-            <h1><a href="index.html">DCODELAB</a></h1>
+  <header id="header_sub">
+    <div class="inner">
+      <h1><a href="index.html">Nudie Jeans</a></h1>
+      <nav class="menuWeb">
+        <ul id="gnb">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="location.html">LOCATION</a></li>
+        </ul>
+        <ul class="util">
+          <li><a href="#">Contact</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="#">Sitemap</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="btnCall">
+        <span>메뉴호출</span>
+      </a>
+      <nav class="menuMo">
+        <h1>
+          <a href="index.html">Nudie Jeans</a>
+        </h1>
+        <ul id="gnbMo">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="location.html">LOCATION</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- header -->
 
-           <nav class="menuWeb">
-                <ul id="gnb">
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="youtube.html">YOUTUBE</a></li>
-                    <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="location.html">LOCATION</a></li>
-                </ul>
-               
-                <ul class="util">
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Sitemap</a></li>
-                </ul>
-           </nav>
-
-           <a href="#" class="btnCall">
-               <span>메뉴호출</span>
-           </a>
-
-           <nav class="menuMo">
-               <h1>
-                   <a href="index.html">DCODELAB</a>
-                    <span>UI/UX DEVELOPMENT INSTITUTE</span>
-                </h1>
-
-                <ul id="gnbMo">
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="youtube.html">YOUTUBE</a></li>
-                    <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="location.html">LOCATION</a></li>
-                </ul>
-           </nav>
-
+  <section class="content location">
+    <div class="inner">
+      <div class="visual">
+        <div class="mask">
+          <div class="pic">
+            <img src="./img/location/visual03.jpg" alt="">
+          </div>
         </div>
-    </header>
-
-    <section class="content">
-        <div class="sub_visual"></div>
-        <div class="inner">
-            <h1>LOCATION <span>찾아오시는길</span></h1>
-            <!--컨텐츠 들어가는 부분 -->
+        <div class="location">
+          <div class="left">
+            <h2>Location</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Numquam ipsam facere est eius adipisci sequi minima quos ad temporibus impedit, tempore perspiciatis,
+              labore delectus neque amet autem? Quasi, officia fugit!</p>
+          </div>
+          <div class="right">
+            loaction
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
 
-    <footer id="footer_sub">
-        <div class="inner">
-            <h1>DCODELAB</h1>
-            <ul>
-                <li><a href="#">Policy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Customer</a></li>
-                <li><a href="#">Contact us</a></li>
-            </ul>
-
-            <address>
-                address:DCODELAB, 60, Sajik-ro 8-gil, Jongro-gu, Seoul, Republic of Lorea(Post Code 03172) <br/>
-                TEL: +82-2-2100-2114 FAX:+82-2-2100-7999
-            </address>
-
-            <p>Copyright &copy; 2022 DCODELAB ALL Right reserved.</p>
+    <div class="banner_con">
+      <div class="text_box">
+      <h2>Contact</h2>
+      <p>
+       Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Eaque quibusdam itaque cumque, ipsa velit iure ducimus quo earum quam rem.
+      </p>
+    </div>
+      <div class="banner">
+        <div class="banner_list">
+          <ul class="list"></ul>
+          <a href="#" class="prev">
+            <i class="fas fa-arrow-left"></i>
+          </a>
+          <a href="#" class="next">
+            <i class="fas fa-arrow-right"></i>
+          </a>
         </div>
-    </footer>
+      </div>
+    </div>
+  </section>
+  <footer id="footer_sub">
+    <div class="inner">
+      <h1>Nudie Jeans</h1>
+      <ul>
+        <li><a href="#">Policy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Customer</a></li>
+        <li><a href="#">Contact us</a></li>
+      </ul>
+      <address>
+        Nudie Jeans Marketing AB
+        Västra Hamngatan 6
+        SE-411 17 Göteborg
+        Sweden <br />
+        Phone: +46 10 1515600
+        Fax: +46 10 15 15 699
+      </address>
+      <p>© 2022 Nudie Jeans Co. All rights reserved. <br>
+        Privacy, Cookie Policy & Cookie Settings</p>
+    </div>
+  </footer>
 </body>
+
 </html>
