--- a/about.html
+++ b/about.html
@@ -26,8 +26,6 @@
         </ul>
         <ul class="util">
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Login</a></li>
           <li><a href="join.html">Join</a></li>
           <li><a href="#">Sitemap</a></li>
         </ul>
@@ -38,19 +36,18 @@
       <nav class="menuMo">
         <h1>
           <a href="index.html">Nudie Jeans</a>
-          <span>UI/UX DEVELOPMENT INSTITUTE</span>
         </h1>
         <ul id="gnbMo">
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="youtube.html">YOUTUBE</a></li>
-          <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
       </nav>
-
     </div>
   </header>
+  <!-- header -->
 
   <section class="content about">
     <div class="inner">
