--- a/gallery.html
+++ b/gallery.html
@@ -12,47 +12,39 @@
 <body>
     <header id="header_sub">
         <div class="inner">
-            <h1><a href="index.html">DCODELAB</a></h1>
-
-           <nav class="menuWeb">
-                <ul id="gnb">
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="youtube.html">YOUTUBE</a></li>
-                    <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="location.html">LOCATION</a></li>
-                </ul>
-               
-                <ul class="util">
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Sitemap</a></li>
-                </ul>
-           </nav>
-
-           <a href="#" class="btnCall">
-               <span>메뉴호출</span>
-           </a>
-
-           <nav class="menuMo">
-               <h1>
-                   <a href="index.html">DCODELAB</a>
-                    <span>UI/UX DEVELOPMENT INSTITUTE</span>
-                </h1>
-
-                <ul id="gnbMo">
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="youtube.html">YOUTUBE</a></li>
-                    <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="location.html">LOCATION</a></li>
-                </ul>
-           </nav>
-
+          <h1><a href="index.html">Nudie Jeans</a></h1>
+          <nav class="menuWeb">
+            <ul id="gnb">
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="youtube.html">YOUTUBE</a></li>
+              <li><a href="gallery.html">GALLERY</a></li>
+              <li><a href="community.html">COMMUNITY</a></li>
+              <li><a href="location.html">LOCATION</a></li>
+            </ul>
+            <ul class="util">
+              <li><a href="#">Contact</a></li>
+              <li><a href="join.html">Join</a></li>
+              <li><a href="#">Sitemap</a></li>
+            </ul>
+          </nav>
+          <a href="#" class="btnCall">
+            <span>메뉴호출</span>
+          </a>
+          <nav class="menuMo">
+            <h1>
+              <a href="index.html">Nudie Jeans</a>
+            </h1>
+            <ul id="gnbMo">
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="youtube.html">YOUTUBE</a></li>
+              <li><a href="community.html">COMMUNITY</a></li>
+              <li><a href="gallery.html">GALLERY</a></li>
+              <li><a href="location.html">LOCATION</a></li>
+            </ul>
+          </nav>
         </div>
-    </header>
+      </header>
+      <!-- header -->
 
     <section class="content">
         <div class="sub_visual"></div>
