--- a/join.html
+++ b/join.html
@@ -12,11 +12,41 @@
 </head>
 
 <body>
-  <header id="header_sub" class="join_header">
+  <header id="header_sub">
     <div class="inner">
       <h1><a href="index.html">Nudie Jeans</a></h1>
+      <nav class="menuWeb">
+        <ul id="gnb">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="location.html">LOCATION</a></li>
+        </ul>
+        <ul class="util">
+          <li><a href="#">Contact</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="#">Sitemap</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="btnCall">
+        <span>메뉴호출</span>
+      </a>
+      <nav class="menuMo">
+        <h1>
+          <a href="index.html">Nudie Jeans</a>
+        </h1>
+        <ul id="gnbMo">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="location.html">LOCATION</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
+  <!-- header -->
   <section class="content join">
     <div class="main">
       <h2>We've always taken care of your jeans.
