--- a/join.html
+++ b/join.html
@@ -152,8 +152,7 @@
         </div>
         <!-- right -->
       </div>
-      <!-- content -->
-      
+      <!-- cont -->
     </div>
     <!-- inner -->
     <div class="text_box">
@@ -174,7 +173,6 @@
         Welcome to c/o Nudie Jeans.</p>
       </div>
     </div>
- 
   </section>
   <footer id="footer_sub">
     <div class="inner">
