--- a/media.html
+++ b/media.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Location</title>
+  <title>Media</title>
   <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/anime.js" defer></script>
-  <script src="js/location.js" defer></script>
+  <script src="js/media.js" defer></script>
 </head>
 
 <body>
@@ -49,48 +48,73 @@
   </header>
   <!-- header -->
 
-  <section class="content location">
-    <div class="inner">
-      <div class="visual">
-        <div class="mask">
-          <div class="pic">
-            <img src="./img/location/visual03.jpg" alt="">
-          </div>
+  <section class="content media">
+    <div class="visual">
+      <div class="text_box">
+        <h2>WE'RE NUDIE JEANS</h2>
+        <p>media</p>
+      </div>
+    </div>
+    <!--// visual  -->
+    <div class="media_info">
+      <div class="inner">
+        <div class="text_box">
+          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, sit quaerat. Quasi veniam placeat
+            culpa eveniet fugit perspiciatis ipsum? Voluptatibus consequatur sapiente nam facilis illo minus expedita,
+            delectus fugiat rerum! Quam dolor aut laboriosam voluptatibus! Incidunt nostrum provident magnam repudiandae
+            veritatis, libero autem est omnis mollitia. Quam expedita sit amet.</p>
         </div>
-        <div class="location">
-          <div class="left">
-            <h2>Location</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Numquam ipsam facere est eius adipisci sequi minima quos ad temporibus impedit, tempore perspiciatis,
-              labore delectus neque amet autem? Quasi, officia fugit!</p>
-          </div>
-          <div class="right">
-            loaction
-          </div>
+        <div class="info_list">
+          <article class="info1">
+            <img src="img/media/info01.jpg" alt="">
+            <i></i>
+          </article>
+          <article class="info2">
+            <img src="img/media/info02.jpg" alt="">
+            <i></i>
+          </article>
+          <article class="info3">
+            <img src="img/media/info03.jpg" alt="">
+            <i></i>
+          </article>
         </div>
       </div>
     </div>
-
-    <div class="banner_con">
-      <div class="text_box">
-      <h2>Contact</h2>
-      <p>
-       Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Eaque quibusdam itaque cumque, ipsa velit iure ducimus quo earum quam rem.
-      </p>
-    </div>
-      <div class="banner">
-        <div class="banner_list">
-          <ul class="list"></ul>
-          <a href="#" class="prev">
-            <i class="fas fa-arrow-left"></i>
-          </a>
-          <a href="#" class="next">
-            <i class="fas fa-arrow-right"></i>
-          </a>
+    <!--// media_info  -->
+     <div class="youtube_con">
+      <div class="inner">
+        <ul class="vid_list">
+          <li>
+            <a href="#none"><span>Bake Your Own</span></a>
+          </li>
+          <li>
+            <a href="#none"><span>Repair</span> </a>
+          </li>
+          <li>
+            <a href="#none"><span>Sustain</span></a>
+          </li>
+          <li>
+            <a href="#none"><span>Live</span></a>
+          </li>
+          <li>
+            <a href="#none"><span>Faq</span></a>
+          </li>
+        </ul>
+        <div class="vCon">
+          <div class="vid_con"></div>
         </div>
+      </div>
+    </div>
+    <!--// youtube_con  -->
+    <div class="banner">
+      <div class="text_box">
+        <p>Ten stores, ten unique versions of our new fit, <br>
+          Rad Rufus, limited to 25 pieces per store.</p>
       </div>
     </div>
   </section>
+
   <footer id="footer_sub">
     <div class="inner">
       <h1>Nudie Jeans</h1>
