--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="media.html">MEDIA</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">LOCATION</a></li>
@@ -48,7 +48,7 @@
         </h1>
         <ul id="gnbMo">
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="media.html">MEDIA</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
