메인 팝업 스킵네비게이션

--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
     <div class="visual">
       <div class="text_con">
         <div class="text_box">
-          <h2>Lorem, ipsum dolor.</h2>
+          <h2>Nudie Jeans Gallery</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid tempora nam inventore nesciunt, sequi
             porro obcaecati sed accusamus rerum voluptas!</p>
         </div>
