--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 </head>
 
 <body>
+
+  <ul id="skipNavi">
+    <li><a href="#header">Main Menu Shortcuts</a></li>
+    <li><a href="#new">Body Shortcuts</a></li>
+    <li><a href="#footer">Shortcuts to the bottom menu</a></li>
+  </ul>
+
   <header id="header">
     <div class="inner">
       <h1><a href="index.html">Nudie Jeans</a></h1>
@@ -36,7 +43,6 @@
         <ul class="util">
           <li><a href="#">Contact</a></li>
           <li><a href="join.html">Join</a></li>
-          <li><a href="#">Sitemap</a></li>
         </ul>
       </nav>
       <a href="#" class="btnCall">
@@ -53,6 +59,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
+        <a href="#none" class="close"><span>메뉴호출</span></a>
       </nav>
     </div>
   </header>
@@ -64,29 +71,29 @@
         <ul class="panel swiper-wrapper">
           <li class=" swiper-slide con1">
             <div class="text_box">
-              <span>Bake Your Own</span>
-              <h2>New Fit! <br><strong>Rad Rufus</strong> Baked by local denim dealers Strictly limited 25 pairs</h2>
-              <p>Ten stores, ten unique versions of our new fit, Rad Rufus, limited to 25 pieces per store.</p>
+              <span> Bake Your Own <i class="mask_bg"></i></span>
+              <h2>New Fit! <br><strong>Rad Rufus</strong> Baked by local denim dealers Strictly limited 25 pairs<i class="mask_bg"></i></h2>
+              <p>Ten stores, ten unique versions of our new fit, Rad Rufus, limited to 25 pieces per store.<i class="mask_bg"></i></p>
             </div>
           </li>
           <li class=" swiper-slide con2">
             <div class="text_box">
-              <span>Every pair of Nudie Jeans</span>
-              <h2>Free repairs Forever.</h2>
+              <span>Every pair of Nudie Jeans<i class="mask_bg"></i></span>
+              <h2>Free repairs Forever.<i class="mask_bg"></i></h2>
               <p> comes with a promise of free repairs. And that promise is forever, no matter when, where, or how you got
                 them. Buying a pair of premium jeans is an investment, and since we provide the jeans, it’s only right we
                 take
-                care of the repairs.</p>
+                care of the repairs.<i class="mask_bg"></i></p>
             </div>
           </li>
           <li class=" swiper-slide con3">
             <div class="text_box">
-              <span>No one is an island entirely on their own</span>
-              <h2>Island Life</h2>
+              <span>No one is an island entirely on their own<i class="mask_bg"></i></span>
+              <h2>Island Life<i class="mask_bg"></i></h2>
               <p>is whatever you make of it: a place for recreation or adventure. Pitch your tent wherever you please,
                 accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not go
                 for
-                a swim.</p>
+                a swim.<i class="mask_bg"></i></p>
             </div>
           </li>
         </ul>
@@ -102,6 +109,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/new01.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h2>Lorem, ipsum dolor.</h2>
@@ -114,6 +122,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/new02.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h2>Lorem, ipsum dolor.</h2>
@@ -126,6 +135,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/new03.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h2>Lorem, ipsum dolor.</h2>
@@ -248,6 +258,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal01.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -259,6 +270,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal02.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -270,6 +282,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal03.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -281,6 +294,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal04.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -292,6 +306,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal05.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -303,6 +318,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal06.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -314,6 +330,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal07.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -325,6 +342,7 @@
             <a href="#">
               <div class="pic">
                 <img src="./img/main/journal08.jpg" alt="">
+                <i class="mask_bg"></i>
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -617,6 +635,25 @@
         Privacy, Cookie Policy & Cookie Settings</p>
   </footer>
 
+  <!--popup  -->
+  <div id="popup">
+    <div class="cont">
+      <div class="pic">
+        <img src="img/main/pop01.jpg" alt="팝업 이미지">
+      </div>
+      <div class="text_box">
+        <h2>Nudie JeansCo</h2>
+        <p>Event</p>
+      </div>
+    </div>
+    <div class="wrap">
+      <div class="checks">
+        <input type="checkbox"  id="ck" value="game">
+        <label for="ck">Let's stop watching today</label>
+      </div>
+    </div>
+    <a href="#" class="close_btn">close</a>
+  </div>
 </body>
 
 </html>
