loaction 추가수정, 갤러리 수정

--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
   <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/main.js" defer></script>
+  <script src="js/sub.js" defer></script>
+  <script src="js/about.js" defer></script>
 </head>
 
 <body>
@@ -44,6 +45,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
+        <a href="#none" class="close"><span>메뉴호출</span></a>
       </nav>
     </div>
   </header>
@@ -56,12 +58,13 @@
           <img src="./img/big/8.jpg" alt="">
         </div>
         <div class="text_box">
-          <h1>About</h1>
-          <h2>Get the balance right</h2>
+          <h1>About<i class="mask_bg"></i></h1>
+          <h2>Get the balance right<i class="mask_bg"></i></h2>
           <p>
             Nudie Jeans is based on an idea. This idea is in turn composed of several concepts, beliefs, and a good
             portion of old fashioned fighting spirit. The pursuit of doing the opposite was one of the main reasons the
             brand got started, although not an end in itself.
+            <i class="mask_bg"></i>
           </p>
         </div>
       </div>
@@ -119,9 +122,9 @@
               cotton. </p>
           </div>
           <div class="text_line">
-            <h3>Nudie Jeans as a workplace </h3>
+            <h3>Nudie Jeans as a workplace <i class="mask_bg"></i></h3>
             <p>At Nudie Jeans, we consider our employees our most important resource alongside our products. They
-              provide the vigor and strength needed for Nudie Jeans’ future.</p>
+              provide the vigor and strength needed for Nudie Jeans’ future. <i class="mask_bg"></i></p>
           </div>
         </article>
         <article>
@@ -132,18 +135,19 @@
             </div>
           </div>
           <div class="text_line">
-            <h3>It all starts with a <br> pair of drys.</h3>
+            <h3>It all starts with a <br> pair of drys.<i class="mask_bg"></i></h3>
             <p><strong>Ever since we started</strong>, we've loved the idea that your drys, sooner or later, start
               reflecting what you've been through together. There's soul, and great stories, buried deep in those twill
-              lines.</p>
+              lines.<i class="mask_bg"></i></p>
             <p>What's even greater is the people who share their stories with us, and those who donate their jeans to
               our Re-use program. How you break in denim and when to wash is a matter of personal preference. It's your
-              journey, and ultimately up to you to decide how far you want to take it.</p>
+              journey, and ultimately up to you to decide how far you want to take it.<i class="mask_bg"></i></p>
           </div>
         </article>
         <article>
           <div class="pic">
             <img src="./img/about/about_with02.jpg" alt="">
+            <i class="mask_bg"></i>
           </div>
           <div class="text_box">
             <h3>We are not doing it for the awards...</h3>
