--- a/gallery.html
+++ b/gallery.html
@@ -66,35 +66,36 @@
         <div class="con">
           <div class="left">
             <div class="img">
-              <img src="./img/big/1.jpg" alt="">
+              <img src="./img/gallery/intro01.jpg" alt="">
+             
             </div>
-            <i></i>
+            <i class="t_bg"></i>
           </div>
           <div class="right">
             <div class="text_box">
-              <h2>Lorem, ipsum.</h2>
+              <h2>Lorem, ipsum. <i class="mask_bg"></i></h2>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis possimus ea aliquid doloremque
                 veritatis reiciendis ipsum sequi, minus consequuntur? Voluptatum fugiat laborum dolore nisi nihil. Culpa
-                veritatis fugiat dolorum possimus.</p>
-              <span>Lorem, ipsum dolor.</span>
+                veritatis fugiat dolorum possimus.<i class="mask_bg"></i></p>
+              <span>Lorem, ipsum dolor. <i class="mask_bg"></i></span>
             </div>
           </div>
         </div>
         <div class="con">
           <div class="left">
             <div class="text_box">
-              <h2>Lorem, ipsum.</h2>
+              <h2>Lorem, ipsum.<i class="mask_bg"></i></h2>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis possimus ea aliquid doloremque
                 veritatis reiciendis ipsum sequi, minus consequuntur? Voluptatum fugiat laborum dolore nisi nihil. Culpa
-                veritatis fugiat dolorum possimus.</p>
-              <span>Lorem, ipsum dolor.</span>
+                veritatis fugiat dolorum possimus.<i class="mask_bg"></i></p>
+              <span>Lorem, ipsum dolor.<i class="mask_bg"></i></span>
             </div>
           </div>
           <div class="right">
             <div class="img">
-              <img src="./img/big/1.jpg" alt="">
+              <img src="./img/gallery/intro02.jpg" alt="">
             </div>
-            <i></i>
+            <i class="t_bg"></i>
           </div>
         </div>
       </div>
@@ -112,7 +113,7 @@
     <div class="gallery_con">
       <div class="inner">
         <article id="searchBox">
-          <input type="text" placeholder="검색어 입력" id="search">
+          <input type="text" placeholder="Enter search terms" id="search">
           <button class="btnSearch"><i class="fas fa-search"></i></button>
           <div class="loading">
             <div class="cloud">
