--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </li>
         </ul>
       </div>
-      <div class="Sus-pagination"></div>
+      <div class="swiper-pagination"></div>
     </section>
     <!--// visual -->
     <section id="new">
