mobile 메뉴 1차 수정

--- a/media.html
+++ b/media.html
@@ -8,6 +8,7 @@
   <title>Media</title>
   <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/sub.js" defer></script>
   <script src="js/media.js" defer></script>
 </head>
 
@@ -43,6 +44,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
+        <a href="#none" class="close"><span>메뉴호출</span></a>
       </nav>
     </div>
   </header>
