--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+  <script src="js/sub.js" defer></script>
   <script src="js/gallery.js" defer></script>
 </head>
 
@@ -44,6 +45,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
+        <a href="#none" class="close"><span>메뉴호출</span></a>
       </nav>
     </div>
   </header>
