--- a/join.html
+++ b/join.html
@@ -8,6 +8,7 @@
   <title>Join</title>
   <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/sub.js" defer></script>
   <script src="js/join.js" defer></script>
 </head>
 
@@ -18,7 +19,7 @@
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="media.html">MEDIA</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="location.html">LOCATION</a></li>
@@ -38,11 +39,12 @@
         </h1>
         <ul id="gnbMo">
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="media.html">MEDIA</a></li>
           <li><a href="community.html">COMMUNITY</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
+        <a href="#none" class="close"><span>메뉴호출</span></a>
       </nav>
     </div>
   </header>
