--- a/location.html
+++ b/location.html
@@ -12,7 +12,7 @@
   <!-- js -->
   <script src="js/anime.js" defer></script>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=81a4a2e5cc83248f021533735820e8e6"></script>
-  <script src="js/sub.js"></script>
+  <script src="js/sub.js" defer></script>
   <script src="js/location.js" defer></script>
 </head>
 
@@ -48,6 +48,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
+        <a href="#none" class="close"><span>메뉴호출</span></a>
       </nav>
     </div>
   </header>
